--- a/apps/admin/src/app/pages/categories/categories-list/categories-list.component.html
+++ b/apps/admin/src/app/pages/categories/categories-list/categories-list.component.html
@@ -1,3 +1,4 @@
+<p-toast position="top-right"></p-toast>
 <div class="admin-page">
   <p-card header="Categories" subheader="List of all categories">
     <div class="grid">
@@ -23,16 +24,44 @@
           >
             <ng-template pTemplate="header">
               <tr>
-                <th>id</th>
-                <th>Name</th>
+                <!-- <th>id</th> -->
+                <th pSortableColumn="name">
+                  Name <p-sortIcon field="name"></p-sortIcon>
+                </th>
                 <th>Icon</th>
+                <th>Color</th>
               </tr>
             </ng-template>
             <ng-template pTemplate="body" let-category>
               <tr>
-                <td>{{ category.id }}</td>
+                <!-- <td>{{ category.id }}</td> -->
                 <td>{{ category.name }}</td>
-                <td>{{ category.icon }}</td>
+                <td>
+                  <i
+                    style="font-size: 2rem"
+                    class="pi"
+                    [ngClass]="'pi-' + category.icon"
+                  ></i>
+                </td>
+                <td>
+                  <i
+                    class="pi pi-circle-on"
+                    style="font-size: 2rem"
+                    [ngStyle]="{ color: category.color }"
+                  ></i>
+                </td>
+                <td>
+                  <p-button
+                    icon="pi pi-trash"
+                    styleClass="p-button-danger mr-2"
+                    (click)="deleteCategory(category.id)"
+                  ></p-button>
+                  <p-button
+                    icon="pi pi-pencil"
+                    styleClass="p-button-success"
+                    (click)="updateCategory(category.id)"
+                  ></p-button>
+                </td>
               </tr>
             </ng-template>
           </p-table>
@@ -41,3 +70,8 @@
     </div>
   </p-card>
 </div>
+<p-confirmDialog
+  [style]="{ width: '50vw' }"
+  [baseZIndex]="10000"
+  rejectButtonStyleClass="p-button-text"
+></p-confirmDialog>
