admin product list

--- a/apps/admin/src/app/shared/sidebar/sidebar.component.html
+++ b/apps/admin/src/app/shared/sidebar/sidebar.component.html
@@ -8,7 +8,7 @@
         <a routerLink="/dashboard">Dashboard<i class="pi pi-home"></i></a>
       </li>
       <li>
-        <a href="">products<i class="pi pi-briefcase"></i></a>
+        <a routerLink="/products">products<i class="pi pi-briefcase"></i></a>
       </li>
       <li>
         <a routerLink="/categories">categories<i class="pi pi-list"></i></a>
