admin product crud done

--- a/apps/admin/src/app/pages/products/products-list/products-list.component.html
+++ b/apps/admin/src/app/pages/products/products-list/products-list.component.html
@@ -21,6 +21,8 @@
             [value]="products"
             [tableStyle]="{ width: '80vw' }"
             styleClass="p-datatable-gridlines"
+            [paginator]="true"
+            [rows]="4"
           >
             <ng-template pTemplate="header">
               <tr>
@@ -47,7 +49,7 @@
               <tr>
                 <!-- <td>{{ product.id }}</td> -->
                 <td>{{ product.name }}</td>
-                <td>{{ product.image }}</td>
+                <td><img [src]="product.image" alt="" /></td>
                 <td>{{ product.price }}</td>
                 <td>{{ product.countInStock }}</td>
                 <td>{{ product.category }}</td>
