--- a/apps/admin/src/app/pages/categories/categories-list/categories-list.component.html
+++ b/apps/admin/src/app/pages/categories/categories-list/categories-list.component.html
@@ -21,6 +21,8 @@
             [value]="categories"
             [tableStyle]="{ width: '80vw' }"
             styleClass="p-datatable-gridlines"
+            [paginator]="true"
+            [rows]="4"
           >
             <ng-template pTemplate="header">
               <tr>
