admin user crud

--- a/apps/admin/src/app/pages/products/products-list/products-list.component.html
+++ b/apps/admin/src/app/pages/products/products-list/products-list.component.html
@@ -49,7 +49,9 @@
               <tr>
                 <!-- <td>{{ product.id }}</td> -->
                 <td>{{ product.name }}</td>
-                <td><img [src]="product.image" alt="" /></td>
+                <td>
+                  <img [src]="product.image" alt="" width="50" height="50" />
+                </td>
                 <td>{{ product.price }}</td>
                 <td>{{ product.countInStock }}</td>
                 <td>{{ product.category }}</td>
