--- a/apps/admin/src/app/shared/sidebar/sidebar.component.html
+++ b/apps/admin/src/app/shared/sidebar/sidebar.component.html
@@ -17,7 +17,7 @@
         <a href="">orders<i class="pi pi-shopping-cart"></i></a>
       </li>
       <li>
-        <a href="">users<i class="pi pi-users"></i></a>
+        <a routerLink="/users">users<i class="pi pi-users"></i></a>
       </li>
       <li>
         <a href="">logout<i class="pi pi-sign-out"></i></a>
