Admin Crud for Orders

--- a/apps/admin/src/app/shared/sidebar/sidebar.component.html
+++ b/apps/admin/src/app/shared/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <div class="admin-sidebar">
   <div class="logo">
-    <h1>Star Shop</h1>
+    <img src="/assets/images/logo.png" alt="" />
   </div>
   <div class="links">
     <ul>
@@ -14,7 +14,7 @@
         <a routerLink="/categories">categories<i class="pi pi-list"></i></a>
       </li>
       <li>
-        <a href="">orders<i class="pi pi-shopping-cart"></i></a>
+        <a routerLink="/orders">orders<i class="pi pi-shopping-cart"></i></a>
       </li>
       <li>
         <a routerLink="/users">users<i class="pi pi-users"></i></a>
