admin Dashboard Page

--- a/apps/admin/src/app/shared/sidebar/sidebar.component.html
+++ b/apps/admin/src/app/shared/sidebar/sidebar.component.html
@@ -5,7 +5,7 @@
   <div class="links">
     <ul>
       <li>
-        <a routerLink="/dashboard">Dashboard<i class="pi pi-home"></i></a>
+        <a routerLink="/">Dashboard<i class="pi pi-home"></i></a>
       </li>
       <li>
         <a routerLink="/products">products<i class="pi pi-briefcase"></i></a>
