--- a/apps/admin/src/app/pages/dashboard/dashboard.component.html
+++ b/apps/admin/src/app/pages/dashboard/dashboard.component.html
@@ -48,3 +48,11 @@
     </div>
   </p-card>
 </div>
+<div class="grid">
+  <div class="col-6">
+    <eshop-bar-chart></eshop-bar-chart>
+  </div>
+  <div class="col-6">
+    <eshop-bar-chart></eshop-bar-chart>
+  </div>
+</div>
