--- a/styles/apps/admin/dashboard.scss
+++ b/styles/apps/admin/dashboard.scss
@@ -20,26 +20,17 @@
 }
 
 .d-orders {
-  background-color: #ff3cac;
-  background-image: linear-gradient(
-    225deg,
-    #ff3cac 0%,
-    #784ba0 50%,
-    #2b86c5 100%
-  );
+  background-color: #2b054d;
 }
 
 .d-products {
-  background-color: #74ebd5;
-  background-image: linear-gradient(90deg, #74ebd5 0%, #9face6 100%);
+  background-color: #07725e;
 }
 
 .d-users {
-  background-color: #3eecac;
-  background-image: linear-gradient(19deg, #3eecac 0%, #ee74e1 100%);
+  background-color: #113d2d;
 }
 
 .d-totalsales {
-  background-color: #fbda61;
-  background-image: linear-gradient(45deg, #fbda61 0%, #ff5acd 100%);
+  background-color: #806003;
 }
