--- a/styles/apps/admin/shell.scss
+++ b/styles/apps/admin/shell.scss
@@ -11,7 +11,7 @@
   &-sidebar {
     position: fixed;
     width: 175px;
-    background-color: #3bb77e;
+    background-color: #07725e;
     height: 100%;
 
     .logo {
