--- a/apps/eshop-frontend/src/app/shared/header/header.component.html
+++ b/apps/eshop-frontend/src/app/shared/header/header.component.html
@@ -1,1 +1,135 @@
-<p class="red">header works!</p>
+<header class="p-5 h-20 w-screen bg-primary-color text-white">
+  <div class="flex items-center justify-around">
+    <div class="text-2xl font-semibold flex-1">
+      <img src="/assets/images/logo.png" class="md:w-36 w-24" alt="" />
+    </div>
+
+    <div class="hidden md:block flex-1">
+      <div
+        class="flex items-center justify-center border border-secondary-color p-2 rounded-md"
+      >
+        <input
+          type="text "
+          placeholder="search for items..."
+          class="w-3/4 border-none outline-none px-3 bg-primary-color"
+        />
+        <button class="flex items-center justify-center px-3 hover:scale-105">
+          <img
+            src="/assets/icons/search.svg"
+            alt=""
+            class="text-secondary-color w-8"
+          />
+        </button>
+      </div>
+    </div>
+
+    <div class="flex-1">
+      <ul class="flex justify-center items-center gap-6 w-full">
+        <li class="flex justify-center items-center mr-3">
+          <img src="/assets/icons/cart4.svg" class="w-7" alt="" />
+          <a href="" class="relative"
+            ><span class="md:text-2xl">cart</span>
+
+            <span
+              class="absolute -top-3 text-white -right-5 bg-black rounded-full w-5 h-5 flex items-center justify-center"
+              >5</span
+            ></a
+          >
+        </li>
+        <li class="" (click)="toggleDropDown()">
+          <div>
+            <div
+              class="flex justify-center items-center relative cursor-pointer"
+            >
+              <img src="/assets/icons/person.svg" alt="" class="w-7" />
+              <span class="md:text-2xl">Account</span>
+              <img src="/assets/icons/arrow-down.svg" alt="" class="w-7" />
+            </div>
+          </div>
+
+          <div
+            *ngIf="dropDown"
+            class="absolute z-50 top-16 md:top-12 w-32 rounded-sm bg-white flex items-start justify-center gap-3"
+          >
+            <ul>
+              <li
+                *ngFor="let item of dropNavItems"
+                class="text-black hover:text-primary-color m-3"
+              >
+                <a href="{{ item.link }}">{{ item.name }}</a>
+                <hr class="text-primary-color" />
+              </li>
+            </ul>
+          </div>
+        </li>
+      </ul>
+    </div>
+
+    <div class="block sm:hidden lg:hidden md:hidden">
+      <img
+        src="/assets/icons/list.svg"
+        class="w-9 mx-3"
+        alt=""
+        (click)="toggleNav()"
+      />
+      <img src="" alt="" />
+    </div>
+
+    <div
+      *ngIf="openNav"
+      class="md:hidden flex flex-col items-start justify-start text-black bg-primary-color fixed top-0 w-screen min-h-[110vh] p-5 gap-8"
+    >
+      <div class="flex items-center justify-between w-full p-5">
+        <a href=""><img src="/assets/images/logo.png" class="w-48" alt="" /></a>
+
+        <div
+          (click)="toggleNav()"
+          class="border w-8 h-8 border-secondary-color flex items-center justify-center rounded-full"
+        >
+          <img src="/assets/icons/x-lg.svg" alt="" />
+        </div>
+      </div>
+
+      <div class="">
+        <div
+          class="flex items-center justify-center border border-secondary-colo p-3 rounded-md"
+        >
+          <input
+            type="text "
+            placeholder="search items"
+            class="w-3/4 outline-none rounded-l-2xl px-3 bg-primary-color r"
+          />
+          <button class="flex items-center justify-center px-3">
+            <img src="/assets/icons/search.svg" alt="" />
+          </button>
+        </div>
+      </div>
+      <div class="w-4/5">
+        <ul>
+          <li *ngFor="let item of smallSCreenItems" class="my-3 text-white">
+            <a href="{{ item.link }}">{{ item.name }}</a>
+            <hr class="text-secondary-color w-full" />
+          </li>
+        </ul>
+      </div>
+      <div class="border border-secondary-color w-4/5 p-3 rounded-xl">
+        <h3 class="text-white text-bold">Contact Us</h3>
+        <ul>
+          <li *ngFor="let item of contactItems" class="my-3">
+            <a href="{{ item.link }}" class="text-white">{{ item.name }}</a>
+          </li>
+        </ul>
+      </div>
+      <div class="">
+        <h3 class="text-white text-bold">Follow us on</h3>
+        <ul class="flex items-center justify-center">
+          <li *ngFor="let item of SocialItems" class="my-3">
+            <a href="{{ item.link }}">
+              <img src="{{ item.icon }}" alt="" class="mr-3 w-5" />
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</header>
