--- a/apps/eshop-frontend/src/styles.scss
+++ b/apps/eshop-frontend/src/styles.scss
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 /* You can add global styles to this file, and also import other style files */
-@import '../../../styles/admin.scss';
-@import '../../../styles/eshop.scss';
+// @import '../../../styles/admin.scss';
+// @import '../../../styles/eshop.scss';
