--- a/apps/eshop-frontend/src/app/app.component.html
+++ b/apps/eshop-frontend/src/app/app.component.html
@@ -1,3 +1,4 @@
 <eshop-header></eshop-header>
 <router-outlet></router-outlet>
+<eshop-footer-ads></eshop-footer-ads>
 <eshop-footer></eshop-footer>
