--- a/apps/eshop-frontend/src/app/components/hero/hero.component.html
+++ b/apps/eshop-frontend/src/app/components/hero/hero.component.html
@@ -13,12 +13,13 @@
           class="w-full flex-[0.8] md:w-10/12 mb-12 xl:mb-0 xl:pr-16 xl:w-2/3"
         >
           <h2
-            class="text-3xl md:text-5xl lg:text-6xl tracking-tight font-extrabold text-white"
+            class="text-3xl xl:text-5xl lg:text-6xl tracking-tight font-extrabold text-white"
           >
-            <span class="block xl:inline text-dzoma-yellow">
+            <span class="text-dzoma-yellow">
               Fashion that tells a story, from
             </span>
-            <span class="block xl:inline"> Africa to the world. </span>
+            <br class="hidden md:block" />
+            <span> Africa to the world. </span>
           </h2>
           <p
             class="py-3 text-base text-white sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-2xl lg:mx-0"
@@ -28,20 +29,28 @@
             celebrates the rich culture of Africa.
           </p>
           <a
-            href="/"
-            aria-label=""
-            class="text-secondary-color text-2xl inline-flex items-center font-semibold tracking-wider transition-colors duration-200 hover:text-teal-accent-700"
+            href="#_"
+            class="inline-flex overflow-hidden text-white bg-primary-color rounded group"
           >
-            Shop Now
-            <svg
-              class="inline-block w-3 ml-2"
-              fill="currentColor"
-              viewBox="0 0 12 12"
+            <span
+              class="px-3.5 py-2 text-white bg-secondary-color group-hover:bg-yellow-700 flex items-center justify-center"
             >
-              <path
-                d="M9.707,5.293l-5-5A1,1,0,0,0,3.293,1.707L7.586,6,3.293,10.293a1,1,0,1,0,1.414,1.414l5-5A1,1,0,0,0,9.707,5.293Z"
-              ></path>
-            </svg>
+              <svg
+                class="w-5 h-5"
+                fill="none"
+                stroke="currentColor"
+                viewBox="0 0 24 24"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z"
+                ></path>
+              </svg>
+            </span>
+            <span class="pl-4 pr-5 py-2.5">Shop now</span>
           </a>
         </div>
         <div class="flex-[0.2]"></div>
