--- a/apps/eshop-frontend/src/app/shared/header/header.component.html
+++ b/apps/eshop-frontend/src/app/shared/header/header.component.html
@@ -1,4 +1,6 @@
-<header class="p-5 h-20 w-screen bg-primary-color text-white">
+<header
+  class="px-5 h-20 w-screen bg-primary-color text-white sticky top-0 z-50"
+>
   <div class="flex items-center justify-around">
     <div class="text-2xl font-semibold flex-1">
       <img src="/assets/images/logo.png" class="md:w-36 w-24" alt="" />
