--- a/apps/eshop-frontend/src/app/components/featured-products/featured-products.component.html
+++ b/apps/eshop-frontend/src/app/components/featured-products/featured-products.component.html
@@ -1,62 +1,7 @@
 <div
-  class="grid max-w-md gap-10 row-gap-8 lg:max-w-screen-lg sm:row-gap-10 lg:grid-cols-3 xl:max-w-screen-lg sm:mx-auto"
+  class="grid max-w-md gap-10 row-gap-8 w-screen sm:row-gap-3 lg:grid-cols-4 sm:mx-3 xl:max-w-screen-xl"
 >
-  <div
-    class="flex flex-col hover:scale-105 transition duration-500 cursor-pointer bg-white rounded shadow-md border border-sec"
-  >
-    <div class="relative w-full h-48">
-      <img
-        src="https://afroculture.net/wp-content/uploads/2018/03/Dashiki-145.jpg"
-        class="object-contain w-full h-full rounded-t"
-        alt="Plan"
-      />
-    </div>
-    <div
-      class="flex flex-col justify-between flex-grow p-8 border border-t-0 rounded-b"
-    >
-      <div>
-        <div class="text-lg font-semibold">Basic</div>
-        <p class="text-sm text-gray-900">
-          Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-          doloremque.
-        </p>
-        <div class="mt-1 mb-4 mr-1 flex items-center justify-center gap-3">
-          <h4 class="text-2xl font-bold sm:text-3xl">GH₵ 80</h4>
-          <div>
-            <a
-              href=""
-              class="flex items-center justify-center rounded-lg border border-secondary-color hover:border-primary-color p-3"
-            >
-              <img alt="" src="/assets/icons/eye.svg" class="mr-2" />
-              <h4>View</h4>
-            </a>
-          </div>
-        </div>
-      </div>
-      <a
-        href="#_"
-        class="inline-flex overflow-hidden text-white bg-primary-color rounded group"
-      >
-        <span
-          class="px-3.5 py-2 text-white bg-secondary-color group-hover:bg-yellow-700 flex items-center justify-center"
-        >
-          <svg
-            class="w-5 h-5"
-            fill="none"
-            stroke="currentColor"
-            viewBox="0 0 24 24"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z"
-            ></path>
-          </svg>
-        </span>
-        <span class="pl-4 pr-5 py-2.5">Add to cart</span>
-      </a>
-    </div>
+  <div class="" *ngFor="let product of products">
+    <eshop-product-card [product]="product"></eshop-product-card>
   </div>
 </div>
