--- a/apps/eshop-frontend/src/app/pages/home-page/home-page.component.html
+++ b/apps/eshop-frontend/src/app/pages/home-page/home-page.component.html
@@ -1,19 +1,21 @@
 <div class="min-h-screen">
   <eshop-hero></eshop-hero>
-  <div class="min-h-[20vh] md:my-5 my-3 md:px-5">
-    <h2
-      class="md:px-7 px-5 text-2xl xl:text-3xl lg:text-4xl tracking-tight font-bold text-black my-6"
-    >
-      Categories
-    </h2>
-    <eshop-category></eshop-category>
-  </div>
-  <div class="min-h-[20vh] md:px-5">
-    <h2
-      class="md:px-7 px-5 text-2xl xl:text-3xl lg:text-4xl tracking-tight font-bold text-black my-6"
-    >
-      Featured Products
-    </h2>
-    <eshop-featured-products></eshop-featured-products>
+  <div class="flex flex-col items-center justify-center">
+    <div class="">
+      <h2
+        class="text-2xl xl:text-3xl lg:text-4xl tracking-tight font-bold text-black my-6"
+      >
+        Featured Categories
+      </h2>
+      <eshop-category></eshop-category>
+    </div>
+    <div class="">
+      <h2
+        class="text-2xl xl:text-3xl lg:text-4xl tracking-tight font-bold text-black my-6"
+      >
+        Featured Products
+      </h2>
+      <eshop-featured-products></eshop-featured-products>
+    </div>
   </div>
 </div>
