Product Detailed Design  and adjusted grid layout of the cards

--- a/apps/eshop-frontend/src/app/components/product-card/product-card.component.html
+++ b/apps/eshop-frontend/src/app/components/product-card/product-card.component.html
@@ -23,7 +23,7 @@
         <h4 class="text-2xl font-bold sm:text-3xl">GH₵{{ product.price }}</h4>
         <div>
           <a
-            href=""
+            [routerLink]="'/products/' + product.id"
             class="flex items-center justify-center rounded-lg border border-secondary-color hover:border-primary-color p-3"
           >
             <img alt="" src="/assets/icons/eye.svg" class="mr-2" />
