--- a/apps/eshop-frontend/src/app/components/category/category.component.html
+++ b/apps/eshop-frontend/src/app/components/category/category.component.html
@@ -1,42 +1,52 @@
-<div
-  class="grid mx-3 max-w-md gap-10 row-gap-8 w-screen sm:row-gap-3 lg:grid-cols-3 sm:mx-3 xl:max-w-screen-xl"
->
-  <div class="" *ngFor="let category of categories">
+<div class="bg-white py-6 sm:py-8 lg:py-12">
+  <div class="max-w-screen-2xl px-4 md:px-8 mx-auto">
+    <div class="flex justify-between items-end gap-4 mb-6">
+      <h2 class="text-gray-800 text-2xl lg:text-3xl font-bold">Categories</h2>
+    </div>
+
     <div
-      [routerLink]="'/products/category/' + category.id"
-      [ngStyle]="{ backgroundColor: category.color }"
-      class="flex items-center justify-center md:w-80 xl:w-96 md:h-48 h-32 w-11/12 border border-opacity-25 border-primary-color rounded-lg shadow-md hover:scale-105 transition duration-500 cursor-pointer"
+      class="grid sm:grid-cols-2 lg:grid-cols-2 xl:grid-cols-3 gap-x-4 md:gap-x-6 gap-y-8"
     >
-      <div class="flex items-center justify-center gap-5">
-        <div class="">
-          <img
-            src="/assets/images/header.jpeg"
-            alt=""
-            class="object-cover rounded-lg my-2 w-36"
-          />
-        </div>
-        <div class="">
-          <h5 className="lg:text-4xl text-3xl font-bold text-black mb-5 w-1/3 ">
-            {{ category.name }}
-          </h5>
-          <a
-            href="/"
-            aria-label=""
-            class="text-secondary-color inline-flex items-center font-semibold tracking-wider transition-colors duration-200 hover:text-teal-accent-700"
-          >
-            <div class="flex items-center justify-center">
-              Shop now
-              <svg
-                class="inline-block w-3 ml-2"
-                fill="currentColor"
-                viewBox="0 0 12 12"
-              >
-                <path
-                  d="M9.707,5.293l-5-5A1,1,0,0,0,3.293,1.707L7.586,6,3.293,10.293a1,1,0,1,0,1.414,1.414l5-5A1,1,0,0,0,9.707,5.293Z"
-                ></path>
-              </svg>
+      <div class="" *ngFor="let category of categories">
+        <div
+          [routerLink]="'/category/' + category.id"
+          [ngStyle]="{ backgroundColor: category.color }"
+          class="flex items-center justify-center md:w-80 xl:w-96 md:h-48 h-32 w-11/12 border border-opacity-25 border-primary-color rounded-lg shadow-md hover:scale-105 transition duration-500 cursor-pointer"
+        >
+          <div class="flex items-center justify-center gap-5">
+            <div class="">
+              <img
+                src="/assets/images/header.jpeg"
+                alt=""
+                class="object-cover rounded-lg my-2 w-36"
+              />
             </div>
-          </a>
+            <div class="">
+              <h5
+                className="lg:text-4xl text-3xl font-bold text-black mb-5 w-1/3 "
+              >
+                {{ category.name }}
+              </h5>
+              <a
+                [routerLink]="'/category/' + category.id"
+                aria-label=""
+                class="text-secondary-color inline-flex items-center font-semibold tracking-wider transition-colors duration-200 hover:text-teal-accent-700"
+              >
+                <div class="flex items-center justify-center">
+                  Shop now
+                  <svg
+                    class="inline-block w-3 ml-2"
+                    fill="currentColor"
+                    viewBox="0 0 12 12"
+                  >
+                    <path
+                      d="M9.707,5.293l-5-5A1,1,0,0,0,3.293,1.707L7.586,6,3.293,10.293a1,1,0,1,0,1.414,1.414l5-5A1,1,0,0,0,9.707,5.293Z"
+                    ></path>
+                  </svg>
+                </div>
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
