--- a/apps/eshop-frontend/src/app/components/featured-products/featured-products.component.html
+++ b/apps/eshop-frontend/src/app/components/featured-products/featured-products.component.html
@@ -1,7 +1,17 @@
-<div
-  class="grid max-w-md gap-10 row-gap-8 w-screen sm:row-gap-3 lg:grid-cols-4 sm:mx-3 xl:max-w-screen-xl"
->
-  <div class="" *ngFor="let product of products">
-    <eshop-product-card [product]="product"></eshop-product-card>
+<div class="bg-white py-6 sm:py-8 lg:py-12">
+  <div class="max-w-screen-2xl px-4 md:px-8 mx-auto">
+    <div class="flex justify-between items-end gap-4 mb-6">
+      <h2 class="text-gray-800 text-2xl lg:text-3xl font-bold">
+        Featured Products
+      </h2>
+    </div>
+
+    <div
+      class="grid sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-x-4 md:gap-x-6 gap-y-8"
+    >
+      <div class="" *ngFor="let product of products">
+        <eshop-product-card [product]="product"></eshop-product-card>
+      </div>
+    </div>
   </div>
 </div>
