--- a/apps/eshop-frontend/src/app/pages/home-page/home-page.component.html
+++ b/apps/eshop-frontend/src/app/pages/home-page/home-page.component.html
@@ -1,20 +1,10 @@
 <div class="min-h-screen">
   <eshop-hero></eshop-hero>
-  <div class="flex flex-col items-center justify-center">
+  <div class="">
     <div class="">
-      <h2
-        class="text-2xl xl:text-3xl lg:text-4xl tracking-tight font-bold text-black my-6"
-      >
-        Featured Categories
-      </h2>
       <eshop-category></eshop-category>
     </div>
     <div class="">
-      <h2
-        class="text-2xl xl:text-3xl lg:text-4xl tracking-tight font-bold text-black my-6"
-      >
-        Featured Products
-      </h2>
       <eshop-featured-products></eshop-featured-products>
     </div>
   </div>
