Product Cart and Product Orders

--- a/apps/eshop-frontend/src/app/components/product-card/product-card.component.html
+++ b/apps/eshop-frontend/src/app/components/product-card/product-card.component.html
@@ -32,8 +32,8 @@
         </div>
       </div>
     </div>
-    <a
-      href="#_"
+    <button
+      (click)="addProductToCart()"
       class="inline-flex overflow-hidden text-white bg-primary-color rounded group"
     >
       <span
@@ -55,6 +55,6 @@
         </svg>
       </span>
       <span class="pl-4 pr-5 py-2.5">Add to cart</span>
-    </a>
+    </button>
   </div>
 </div>
