--- a/apps/eshop-frontend/src/app/shared/header/header.component.html
+++ b/apps/eshop-frontend/src/app/shared/header/header.component.html
@@ -37,14 +37,11 @@
         </li>
         <li class="flex justify-center items-center mr-3">
           <img src="/assets/icons/cart4.svg" class="w-7" alt="" />
-          <a href="" class="relative"
+          <a routerLink="cart" class="relative"
             ><span class="md:text-2xl">cart</span>
 
-            <span
-              class="absolute -top-3 text-white -right-5 bg-black rounded-full w-5 h-5 flex items-center justify-center"
-              >5</span
-            ></a
-          >
+            <eshop-cart-icon></eshop-cart-icon>
+          </a>
         </li>
         <li class="" (click)="toggleDropDown()">
           <div>
