--- a/apps/admin/src/app/pages/categories/categories-form/categories-form.component.html
+++ b/apps/admin/src/app/pages/categories/categories-form/categories-form.component.html
@@ -44,22 +44,26 @@
               >
             </div>
             <div class="field col">
-              <label for="icon">Icon</label>
-              <input
-                formControlName="icon"
-                id="icon"
-                type="text"
-                class="text-base text-color surface-overlay p-2 border-1 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full"
-              />
-              <small
-                *ngIf="categoryForm.icon.invalid && isSubmitted"
-                class="p-error"
-                >Icon is required</small
-              >
-            </div>
-            <div class="field col">
               <label for="color">Color</label><br />
               <p-colorPicker formControlName="color"></p-colorPicker>
+            </div>
+            <div class="field col-12">
+              <label for="name">Main Image</label> <br />
+              <input
+                type="file"
+                class="p-inputtext"
+                accept="image/*"
+                (change)="onImageUpload($event)"
+              />
+              <br />
+              <small
+                *ngIf="categoryForm.image.invalid && isSubmitted"
+                class="p-error"
+                >Image is required</small
+              >
+              <div class="col-2 mt-2 pl-0">
+                <img style="width: 100%" [src]="imageDisplay" alt="" />
+              </div>
             </div>
           </div>
         </form>
