--- a/apps/admin/src/app/pages/categories/categories-list/categories-list.component.html
+++ b/apps/admin/src/app/pages/categories/categories-list/categories-list.component.html
@@ -30,7 +30,7 @@
                 <th pSortableColumn="name">
                   Name <p-sortIcon field="name"></p-sortIcon>
                 </th>
-                <th>Icon</th>
+                <th>Image</th>
                 <th>Color</th>
               </tr>
             </ng-template>
@@ -39,11 +39,7 @@
                 <!-- <td>{{ category.id }}</td> -->
                 <td>{{ category.name }}</td>
                 <td>
-                  <i
-                    style="font-size: 2rem"
-                    class="pi"
-                    [ngClass]="'pi-' + category.icon"
-                  ></i>
+                  <img [src]="category.image" alt="" width="50" height="50" />
                 </td>
                 <td>
                   <i
