--- a/apps/eshop-frontend/src/app/components/category/category.component.html
+++ b/apps/eshop-frontend/src/app/components/category/category.component.html
@@ -11,19 +11,19 @@
         <div
           [routerLink]="'/category/' + category.id"
           [ngStyle]="{ backgroundColor: category.color }"
-          class="flex items-center justify-center md:w-80 xl:w-96 md:h-48 h-32 w-11/12 border border-opacity-25 border-primary-color rounded-lg shadow-md hover:scale-105 transition duration-500 cursor-pointer"
+          class="flex items-center justify-center group h-80 overflow-hidden relative p-4 border-primary-color rounded-lg shadow-md hover:scale-105 transition duration-500 cursor-pointer"
         >
           <div class="flex items-center justify-center gap-5">
             <div class="">
               <img
-                src="/assets/images/header.jpeg"
+                [src]="category.image"
                 alt=""
                 class="object-cover rounded-lg my-2 w-36"
               />
             </div>
             <div class="">
               <h5
-                className="lg:text-4xl text-3xl font-bold text-black mb-5 w-1/3 "
+                className="lg:text-3xl   text-black mb-5 w-1/3   text-2xl  font-bold"
               >
                 {{ category.name }}
               </h5>
@@ -52,3 +52,11 @@
     </div>
   </div>
 </div>
+
+<!-- [ngStyle]="{
+  'background-image': 'url(' + category.image + ')',
+  'background-size': 'cover',
+  'background-repeat': 'no-repeat'
+}" -->
+
+<!-- setting background  -->
