checkout page cart-page thank you page

--- a/apps/eshop-frontend/src/app/components/category/category.component.html
+++ b/apps/eshop-frontend/src/app/components/category/category.component.html
@@ -23,7 +23,7 @@
             </div>
             <div class="">
               <h5
-                className="lg:text-3xl   text-black mb-5 w-1/3   text-2xl  font-bold"
+                className="lg:text-3xl   text-white mb-5 w-1/3   text-2xl  font-extrabold"
               >
                 {{ category.name }}
               </h5>
