--- a/apps/eshop-frontend/src/app/components/hero/hero.component.html
+++ b/apps/eshop-frontend/src/app/components/hero/hero.component.html
@@ -29,7 +29,7 @@
             celebrates the rich culture of Africa.
           </p>
           <a
-            href="#_"
+            routerLink="/products"
             class="inline-flex overflow-hidden text-white bg-primary-color rounded group"
           >
             <span
