--- a/apps/eshop-frontend/src/app/components/order-summary/order-summary.component.html
+++ b/apps/eshop-frontend/src/app/components/order-summary/order-summary.component.html
@@ -2,7 +2,7 @@
   <div class="w-full sm:max-w-xs bg-gray-100 rounded-lg p-4">
     <div class="space-y-1">
       <div class="flex justify-between text-gray-500 gap-4">
-        <span>Delivery fees</span>
+        <span>SubTotal</span>
         <span>GH₵ {{ totalPrice }}</span>
       </div>
 
@@ -23,6 +23,7 @@
     </div>
   </div>
   <button
+    (click)="navigateToCheckout()"
     class="inline-flex overflow-hidden text-white bg-secondary-color rounded group"
   >
     <span
