--- a/apps/eshop-frontend/src/app/pages/product-detail/product-detail.component.html
+++ b/apps/eshop-frontend/src/app/pages/product-detail/product-detail.component.html
@@ -10,16 +10,14 @@
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
-          class="h-4 w-4"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke="currentColor"
+          width="16"
+          height="16"
+          fill="currentColor"
+          class="bi bi-shop"
+          viewBox="0 0 16 16"
         >
           <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"
+            d="M2.97 1.35A1 1 0 0 1 3.73 1h8.54a1 1 0 0 1 .76.35l2.609 3.044A1.5 1.5 0 0 1 16 5.37v.255a2.375 2.375 0 0 1-4.25 1.458A2.371 2.371 0 0 1 9.875 8 2.37 2.37 0 0 1 8 7.083 2.37 2.37 0 0 1 6.125 8a2.37 2.37 0 0 1-1.875-.917A2.375 2.375 0 0 1 0 5.625V5.37a1.5 1.5 0 0 1 .361-.976l2.61-3.045zm1.78 4.275a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 1 0 2.75 0V5.37a.5.5 0 0 0-.12-.325L12.27 2H3.73L1.12 5.045A.5.5 0 0 0 1 5.37v.255a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0zM1.5 8.5A.5.5 0 0 1 2 9v6h1v-5a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v5h6V9a.5.5 0 0 1 1 0v6h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1V9a.5.5 0 0 1 .5-.5zM4 15h3v-5H4v5zm5-5a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1v-3zm3 0h-2v3h2v-3z"
           />
         </svg>
 
@@ -91,6 +89,7 @@
 
           <div class="flex items-center w-2/3">
             <button
+              (click)="decreaseQuantity()"
               type="button"
               class="w-10 h-10 leading-10 text-gray-600 transition hover:opacity-75 border border-secondary-color"
             >
@@ -106,6 +105,7 @@
             />
 
             <button
+              (click)="increaseQuantity()"
               type="button"
               class="w-10 h-10 leading-10 text-gray-600 transition hover:opacity-75 border border-secondary-color"
             >
@@ -167,11 +167,11 @@
             <span class="pl-4 pr-5 py-2.5">Add to cart</span>
           </div>
 
-          <a
+          <!-- <a
             href="#"
             class="inline-block border border-secondary-color hover:bg-secondary-color hover:text-white focus-visible:ring text-gray-500 active:text-gray-700 text-sm md:text-base font-semibold text-center rounded-lg outline-none transition duration-100 px-8 py-3"
             >Buy now</a
-          >
+          > -->
         </div>
         <!-- buttons - end -->
       </div>
